--- a/spring-boot-web/src/main/resources/application-dev.properties
+++ b/spring-boot-web/src/main/resources/application-dev.properties
@@ -5,8 +5,8 @@ server.port = 8889
 ArticalProperties.title = baby
 ArticalProperties.description = this is a bory
 
-mybatis.mapperLocations : classpath:mapper/*.xml
-spring.datasource.username: root
-spring.datasource.password: root
-spring.datasource.url: jdbc:mysql://localhost:3306/spring_boot_test?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-spring.datasource.driver-class-name: com.mysql.jdbc.Driver
+mybatis.mapperLocations = classpath:mapper/*.xml
+spring.datasource.username = root
+spring.datasource.password = root
+spring.datasource.url = jdbc:mysql://localhost:3306/spring_boot_test?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.driver-class-name = com.mysql.jdbc.Driver
