--- a/spring-boot-web/src/main/resources/application-dev.properties
+++ b/spring-boot-web/src/main/resources/application-dev.properties
@@ -2,8 +2,8 @@
 server.port = 8889
 
 #ArticalProperties properties
-ArticalProperties.title = baby
-ArticalProperties.description = this is a bory
+articalproperties.title = baby
+articalproperties.description = this is a bory
 
 mybatis.mapperLocations = classpath:mapper/*.xml
 spring.datasource.username = root
